  02 Sep 2019;  <bemeurer@gentoo.org> -aravis-0.6.4.ebuild:
  media-video/aravis: yank 0.6.4

*aravis-0.6.4-r1 (02 Sep 2019)

  02 Sep 2019;  <bemeurer@gentoo.org> +aravis-0.6.4-r1.ebuild:
  media-video/aravis: Fixed binary install paths

*aravis-0.6.4 (02 Sep 2019)

  02 Sep 2019;  <bemeurer@gentoo.org> +aravis-0.6.4.ebuild, +metadata.xml:
  media-video/aravis: bump 0.6.4