@@ -1,3 +1,8 @@
+*aravis-0.6.4-r2 (02 Sep 2019)
+
+  02 Sep 2019;  <bemeurer@gentoo.org> +aravis-0.6.4-r2.ebuild:
+  media-video/aravis: Remove live dead code
+
   02 Sep 2019;  <bemeurer@gentoo.org> -aravis-0.6.4.ebuild:
   media-video/aravis: yank 0.6.4
 
